tests/executionspec/snapshots/execution_spec__add-field-modify.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Address {
  city: String
  street: String
  zipcode: String
}

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  address: Address
  city: String
  name: String
  street: String
  zipcode: String
}

schema {
  query: Query
}
