tests/executionspec/snapshots/execution_spec__auth-basic.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, port: 8000) @upstream @link(id: "htpasswd", src: ".htpasswd", type: Htpasswd) {
  query: Query
  mutation: Mutation
}

type Mutation {
  protectedType: ProtectedType @http(baseURL: "http://upstream", path: "/protected")
}

type Nested {
  name: String!
  protected: String! @protected
}

type ProtectedType @protected {
  name: String!
  nested: String!
}

type Query {
  nested: Nested! @expr(body: {name: "nested name", protected: "protected nested"})
  protectedScalar: String! @expr(body: "data from protected scalar") @protected
  protectedType: ProtectedType @expr(body: {name: "protected type name", nested: "protected type nested"})
  scalar: String! @expr(body: "data from public scalar")
}
