tests/executionspec/snapshots/execution_spec__batching-post.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(port: 8000, queryValidation: false) @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 1, headers: [], maxSize: 1000}, httpCache: true) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User @http(path: "/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts?id=1")
}

type User {
  id: Int
  name: String
}
